fix: preserve nullable source documentation metadata